<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch3f.la.st3f.k3yg3ndr0id.Password"
    tools:showIn="@layout/activity_password">

    <TextView
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:text="@string/MPfestlegen"
        android:id="@+id/txtMPf" />

    <EditText
        android:hint="@string/TxtMP"
        android:id = "@+id/Masterpw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:hint="@string/TxtMP2"
        android:id = "@+id/Masterpwwdh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtDienst"
        android:id="@+id/textView2" />

    <Spinner android:id="@+id/spinDienst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    </Spinner>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtKennung"
        android:id="@+id/txtKennung" />

    <EditText
        android:hint="@string/TxtEmail"
        android:id = "@+id/Kennung"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false">

    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtURL"
        android:id="@+id/txtURL" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/URL" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtVersion"
                android:id="@+id/txtVersion" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtPWLaenge"
                android:id="@+id/txtPWLaenge" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id = "@+id/Version"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number">
            </EditText>

            <EditText
                android:id = "@+id/passwortlaenge"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number">
            </EditText>
        </TableRow>

    </TableLayout>

    <EditText
        android:id = "@+id/Sonderzeichen"
        android:hint="@string/TxtSonderzeichen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </EditText>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtPasswort"
        android:id="@+id/txtPW" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PassGen" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGO"
        android:onClick="onClickGO"
        style="@android:style/ButtonBar" />

</LinearLayout>
