<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch3f.la.st3f.k3yg3ndr0id.About"
    tools:showIn="@layout/activity_about">

    <EditText
        android:text = "@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text">
    </EditText>


    <TextView android:text="@string/lblAuth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView android:text="@string/pAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/lblVersion"
        android:text="@string/pVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:text="1.0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/lblcontact"
        android:text="@string/pKontakt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/lblmail"
        android:text="@string/pMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"/>

</LinearLayout>
