<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch3f.la.st3f.k3yg3ndr0id.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn"
        android:width="150dp"
        android:height="225dp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/btnGenerator"
        android:onClick="onClickGenerator"/>

    <Button
        android:id="@+id/btn2"
        android:width="150dp"
        android:height="225dp"
        android:layout_columnSpan="1"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/btnVerwaltung"
        android:onClick="onClickVerwaltung"/>

    <Button
        android:id="@+id/btnInfo"
        android:width="150dp"
        android:height="225dp"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/btnInfo"
        android:onClick="onClickShowHelp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:layout_row="1"
        android:layout_column="1"
        android:src="@drawable/pwsecure"
        android:contentDescription="@string/img"/>

</GridLayout>
