<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch3f.la.st3f.k3yg3ndr0id.NewKonto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_konto">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFldDienstname"
        android:id="@+id/txtFldDienstname" />

    <EditText
        android:id = "@+id/newDienst"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFldKennung"
        android:id="@+id/txtFldKennung" />

    <EditText
        android:id = "@+id/newKennung"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFldURL"
        android:id="@+id/txtFldURL" />

    <EditText
        android:id = "@+id/newURL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </EditText>

</LinearLayout>
